# log-buddy

./: Cargo.toml  README.md
.github/workflows/: rust.yml  ubuntu.yml  windows.yml
src/: file_handler.rs  main.rs  sidebar_file_list.rs
