[package]
name = "gtk-test-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.2", package = "gtk4" }
tempfile = "3"
compress-tools = "0.12.2"
walkdir = "2"
log = "0.4"
simple_logger = "1.13.0"
infer = "0.5"